Fixed bottom whitespace on checkout box.
git-svn-id: http://dev.holgerjust.de/svn/redmine-checkout/branches/feature-github@112 2c10314b-d60d-4f8f-b362-a6b3e82123ed

--- a/assets/stylesheets/checkout.css
+++ b/assets/stylesheets/checkout.css
@@ -9,7 +9,7 @@
 
 #checkout_box {
   height: 23px;
-  margin: 10px 0;
+  margin: 10px 0 0;
 }
 
 #checkout_protocols {
